css/info.css
body {
    font-size: 1.1rem !important;
    min-width:100vw;
    min-height:100vh;
    max-width:100vw;
    padding:0 !important;
    margin:0 !important;

    color:#c0e8f9 !important;
    font-family: Montserrat !important;

    background: url(../img/parallax/city2.jpg) no-repeat center center fixed;
    background-size: cover;

    z-index:0;
}


.title-right {
    color: #ce7b91 !important;
}

.title-right:hover {
    cursor: text;
}

.title-left {
    color: #b8d3d1 !important;
}

.main-title {
    font-size: 6rem;
    font-family: "CircularSTD";
    font-weight: 300;
}

a {
    color: #5bbee6;
}


a:hover {
    color: #7fb2cc;
    text-decoration: none;
    cursor: pointer;
}
  

/* ? super hot underline animation */
.underline {
    position: relative;
    color: #5bbee6;
    text-decoration: none;
  }
  .underline:hover {
    color: #7fb2cc;
  }
  .underline:hover::before {
    visibility: visible;
    transform: scaleX(1);
  }
  .underline::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 2px;
    bottom: 0;
    left: 0;
    background-color: #7fb2cc;
    visibility: hidden;
    transform: scaleX(0);
    transition: all 0.3s ease-in-out 0s;
  }

  .underline2 {
    position: relative;
    color: #e9f9ff;
    text-decoration: none;
  }
  .underline2:hover {
    color: #e9f9ff;
  }
  .underline2:hover::before {
    visibility: visible;
    transform: scaleX(1);
  }
  .underline2::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 1px;
    bottom: 0;
    left: 0;
    background-color: #e9f9ff;
    visibility: hidden;
    transform: scaleX(0);
    transition: all 0.3s ease-in-out 0s;
  }
  /* ? super hot underline animation end */

.main-title {
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    margin-top: 10vh;
}

@media (max-width: 609px) {
    .main-title {
        margin-top: 0 !important;
    }

    .title-left {
        margin-top: 10vh;
    }
}
  
.nonoverlay {
    z-index: 100 !important;
    position: relative;
}

a:active,
a:focus {
  outline: 0 !important;
  border: none !important;
  -moz-outline-style: none !important;
  outline-style: none !important;
}

strong {
    color:#ddf5ff !important;
}


.titleh2 {
    padding: 5vh 4vw 0vh 4vw;text-align:center;font-size:2rem;
    color:#ddf5ff !important;
    font-weight:800 !important;
}

.titleh3 {
    padding: 2vh 4vw 0vh 4vw;text-align:center;font-size:1.5rem;
}

.infop {
    padding: 2vh 10vw 0vh 10vw;margin:0;
}

.social-logo {
max-height: 60px;
max-width: 60px;
height: 5vw;
min-height: 35px;
margin: 2% 20px;
transition: transform 0.3s ease-out;
display: inline-block;
}

.social-logo:hover {
transform: translateY(-5px);
}

.social-logo-2 {
max-width: 250px;
width: 20vw;
min-width: 150px;
transition: transform 0.3s ease-out;
display: inline-block;
}

.social-logo-2:hover {
transform: translateY(-5px);
}

@media (max-width: 530px) {
.social-logo {
    margin: 2% 10px;
}
}

#copyright-wrapper {
    padding: 2vh 20vw 2vh 20vw;
  }

  #copyright {
    font-size: 1rem;
    color: #b8d3d1;
    text-align: center;
    margin-bottom: 0;
  }

.overlay2 {
    background: #101020cf; 
    width:      100%;
    height:     100%; 
    top:        0; 
    left:       0; 
    position:   fixed; 
    z-index:5;
}


h3 {
    margin:0;
    color:#c0e8f9 !important;
}

html {
    overflow: hidden !important;
    overflow-y: auto !important;
    scroll-behavior: smooth;
    padding:0;
    margin:0;
}

@font-face {
    font-family: "CircularStd";
    src: url("../fonts/CircularStd-Black.eot?#iefix") format("embedded-opentype"),
      url("../fonts/CircularStd-Black.woff") format("woff"),
      url("../fonts/CircularStd-Black.ttf") format("truetype"),
      url("../fonts/CircularStd-Black.svg#CircularStd-Black") format("svg");
    font-weight: normal;
    font-style: normal;
  }
  

